[package]
name = "egg"
version = "0.1.0"
edition = "2021"
author = "Dr. Ralf Berger"
description = "Simple command line tool to create a short time timer. Plays a sound, if time is up."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soloud = "1"
